--- a/index.html
+++ b/index.html
@@ -13,12 +13,42 @@
 
 <body>
     <div class="container">
-        <h1>
-            Weather App
-        </h1>
-        <a href="" class="btn btn-primary">
-            click me
-        </a>
+        <div class="weather-app">
+            <h1>
+                Stockholm
+            </h1>
+            <ul>
+                <li>
+                    Friday 05:00
+                </li>
+                <li>
+                    clear
+                </li>
+            </ul>
+            <div class="row">
+                <div class="col-6">
+                    <img src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png" alt="clear" />
+                    12 °C|°F
+                </div>
+                <div class="col-6">
+                    <ul>
+                        <li>
+                            Precipitation: 0%
+                        </li>
+                        <li>
+                            Humidity: 73%
+                        </li>
+                        <li>
+                            Wind: 2 km/h
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <small>
+            <a href="https://github.com/behnooshbeheshti/Vanilla-Weather-App" target="_blank">Open-source code</a> by
+            Behnoosh Beheshti
+        </small>
     </div>
     <script src="src/app.js"></script>
 </body>
