--- a/index.html
+++ b/index.html
@@ -15,21 +15,31 @@
     <div class="container">
         <div class="weather-app-wrapper">
             <div class="weather-app">
-                <h1>
-                    Stockholm
-                </h1>
-                <ul>
-                    <li>
-                        Friday 05:00
-                    </li>
-                    <li>
-                        clear
-                    </li>
-                </ul>
+                <div class="overview">
+                    <h1>
+                        Stockholm
+                    </h1>
+                    <ul>
+                        <li>
+                            Friday 05:00
+                        </li>
+                        <li>
+                            clear
+                        </li>
+                    </ul>
+                </div>
                 <div class="row">
                     <div class="col-6">
-                        <img src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png" alt="clear" />
-                        12 °C|°F
+                        <div class="clearfix weather-temperature">
+                            <img src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png" alt="clear"
+                                class="float-left" />
+                            <div class="float-left">
+                                <strong>12</strong>
+                                <span calss="units">
+                                    <a href="#" class="toCelsius">°C</a>|<a href="#" class="toFahrenhied">°F</a>
+                                </span>
+                            </div>
+                        </div>
                     </div>
                     <div class="col-6">
                         <ul>
