--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
                 <div class="row">
                     <div class="col-6">
                         <div class="clearfix weather-temperature">
-                            <img src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png" alt="clear"
-                                class="float-left" />
+                            <img src="" alt="clear" class="float-left" id="icon" />
                             <div class="float-left">
                                 <strong id="temperature"></strong>
                                 <span class="units">
