--- a/index.html
+++ b/index.html
@@ -16,6 +16,17 @@
     <div class="container">
         <div class="weather-app-wrapper">
             <div class="weather-app">
+                <form id="search-form" class="mb-3">
+                    <div class="row">
+                        <div class="col-9">
+                            <input type="search" placeholder="type a city..." class="form-control" id="city-input"
+                                autocomplete="off" />
+                        </div>
+                        <div class="col-3">
+                            <input type="submit" value="search" class="btn btn-primary w-100" />
+                        </div>
+                    </div>
+                </form>
                 <div class="overview">
                     <h1 id="city">
                     </h1>
@@ -29,11 +40,12 @@
                 <div class="row">
                     <div class="col-6">
                         <div class="clearfix weather-temperature">
-                            <img src="" alt="clear" class="float-left" id="icon" />
+                            <img src="" alt="" class="float-left" id="icon" />
                             <div class="float-left">
                                 <strong id="temperature"></strong>
                                 <span class="units">
-                                    <a href="#">°C</a>|<a href="#">°F</a>
+                                    <a href="#" id="celsius-link" class="active">°C</a>|<a href="#"
+                                        id="fahrenhiet-link">°F</a>
                                 </span>
                             </div>
                         </div>
