--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                                 autocomplete="off" />
                         </div>
                         <div class="col-2">
-                            <input type="submit" value="search" class="btn btn-primary" shadow-sm w-200 />
+                            <input type="submit" value="Search" class="btn btn-primary" shadow-sm w-200 />
                         </div>
                         <div class="col-2">
                             <input type="submit" value="Current" class="btn btn-success" id="current-temperature"
@@ -67,6 +67,17 @@
                                     Wind: <span id="wind"></span>km/h
                                 </li>
                             </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="row weather-forecast" id="forecast">
+                    <div class="col-2">
+                        <h3>
+                            12:00
+                        </h3>
+                        <img src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png" alt="">
+                        <div class="weather-forecast-temperature">
+                            <strong>22°</strong>17°
                         </div>
                     </div>
                 </div>
