--- a/index.html
+++ b/index.html
@@ -70,13 +70,17 @@
                         </div>
                     </div>
                 </div>
+                <hr class="line" />
                 <div class="row weather-forecast" id="forecast">
                 </div>
             </div>
             <small>
-                <a href="https://github.com/behnooshbeheshti/Vanilla-Weather-App" target="_blank">Open-source code</a>
-                by
-                Behnoosh Beheshti
+                <a href="https://github.com/behnooshbeheshti/Vanilla-Weather-App" target="_blank">
+                    <strong>
+                        Open-source code
+                    </strong>
+                </a>
+                by Behnoosh Beheshti
             </small>
         </div>
     </div>
