Add feels like label

--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
                         <div class="parameters">
                             <ul>
                                 <li>
+                                    Feels like: <span id="feels-like"></span>
+                                </li>
+                                <li>
                                     Visibility: <span id="visibility"></span>%
                                 </li>
                                 <li>
